<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/kma_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="#90959595"
            app:layout_constraintStart_toStartOf="@id/ivBanner"
            app:layout_constraintTop_toTopOf="@id/ivBanner" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_expand_left_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="@dimen/_8sdp"
            card_view:cardElevation="@dimen/_3sdp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/crdAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="@dimen/_90sdp"
                    card_view:cardElevation="@dimen/_3sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintStart_toEndOf="@id/crdAvatar"
                    app:layout_constraintTop_toTopOf="@id/crdAvatar">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTeacherName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Khoi Nguyen" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMajor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/major"
                        app:layout_constraintStart_toStartOf="@id/tvTeacherName"
                        app:layout_constraintTop_toBottomOf="@id/tvTeacherName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMajorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toEndOf="@id/tvMajor"
                        app:layout_constraintTop_toTopOf="@id/tvMajor"
                        tools:text="Cong nghe thong tin" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/numOfSub"
                        app:layout_constraintStart_toStartOf="@id/tvMajor"
                        app:layout_constraintTop_toBottomOf="@id/tvMajor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNumOfSubject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toEndOf="@id/tvNum"
                        app:layout_constraintTop_toTopOf="@id/tvNum"
                        tools:text="3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/flLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="#C9C9C9"
                    app:layout_constraintTop_toBottomOf="@id/crdAvatar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/crdAvatar"
                    app:layout_constraintTop_toBottomOf="@id/flLine" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/vLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="#C9C9C9"
            app:layout_constraintTop_toBottomOf="@id/crdInfo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/subject_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/vLine"
            app:layout_constraintTop_toBottomOf="@id/vLine" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListSubject"
            tools:listitem="@layout/item_subject" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teaching_assessment"
            app:layout_constraintTop_toBottomOf="@id/rvSubject"
            app:layout_constraintStart_toStartOf="@id/tvListSubject"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>